added meata tags to index.html

--- a/courseara-test/index.html
+++ b/courseara-test/index.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <title>home</title>
     <link rel="icon" href="images/icon-logo.png">
+    <meta charset="uft-8">
+    <meta name="keywords" content="News, CNN, worldNews">
+    <meta name="description" content="News website cnn">
+    <meta name="auther" content="@AbdoAli05">
+    <meta name="viewport" content="width=divice-width, initial-scal=1.0">
 </head>
 
 <body bgcolor="#F5F5F5">
