added meata tags to about.htmls

--- a/courseara-test/about.html
+++ b/courseara-test/about.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <title>about us </title>
     <link rel="icon" href="images/icon-logo.png">
+    <meta name="keywords" content="News, CNN , worldNews">
+    <meta name="description" content=" New fteched form cnn and distrputed again ">
+    <meta name="outher" content="@AbdoAli05">
+    <meta name="viewport" content="width=dvice-width ,initial-scal=1.0">
 </head>
 
 <body bgcolor="#F5F5F5">
