added styless.css, responsive nav bar

--- a/courseara-test/about.html
+++ b/courseara-test/about.html
@@ -4,43 +4,59 @@
 <head>
     <title>about us </title>
     <link rel="icon" href="images/icon-logo.png">
-    <meta name="keywords" content="News, CNN , worldNews">
-    <meta name="description" content=" New fteched form cnn and distrputed again ">
-    <meta name="outher" content="@AbdoAli05">
-    <meta name="viewport" content="width=dvice-width ,initial-scal=1.0">
+    <meta name="keywords" content="News, CNN, worldNews">
+    <meta name="description" content="News website cnn">
+    <meta name="auther" content="@AbdoAli05">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <style>
+        body {
+            background-color: #f5f5f5;
+        }
+    </style>
 </head>
 
-<body bgcolor="#F5F5F5">
+<body>
+
     <div style="width: auto;height: 40px; text-align: center;">
         <h1>"About us "</h1>
     </div>
-    <div style="background-color: azure; width: auto;">
-        <table cellspacing="10">
-            <tr align="center">
-                <td><a href="index.html">home</a></td>
-                <td><a href="articles.html">articles</a></td>
-                <td><a href="contuctUs.html">countact us </a></td>
-                <td><a href="about.html">about us </a></td>
-                <td><a href="search.html">search</a></td>
+    <nav class="nav">
+        <ul class="navbar">
+            <li><a href="index.html">home</a></li>
+            <li><a href="articles.html">articles</a></li>
+            <li><a href="contuctUs.html">countact us </a></li>
+            <li><a href="about.html">about us </a></li>
+            <li><a href="search.html">search</a></li>
+        </ul>
+        <ul>
+            <div class="toggle">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+            </div>
+        </ul>
+    </nav>
 
-            </tr>
-        </table>
-    </div>
-    <table width="700px" cellspacing="10" bgcolor="#DEDEDE">
-        <tr>
-            <td>
-                <div><img src="images/Pic@me.jpg" alt="FlooWaters in Tennesee " title="Floodwaters in Tennessee"></div>
-            </td>
-            <td>
+    <div class="float-container">
+
+        <div class="float-child"> <img src="images/Pic@me.jpg" alt="FlooWaters in Tennesee " title="Floodwaters in Tennessee" >
+
+        </div>
+        <div class="float-child">
+            <spam>
                 Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo, unde non exercitationem nostrum tenetur
                 quod quas minima voluptates culpa commodi nobis aliquam cupiditate eveniet architecto, dolorem officia
                 sunt excepturi. Eligendi.
-            </td>
-        </tr>
-        <tr></tr>
-        <tr></tr>
-        <tr></tr>
-    </table>
+            </spam>
+        </div>
+    </div>
+
+
+
+
     <footer style="background: darkgray;height: 30px;text-align: center; margin: inherit;padding: 10px;
 ">copy Right &copy; to this site UNESCO Regestered by &reg; me </footer>
 </body>
