--- a/courseara-test/articles.html
+++ b/courseara-test/articles.html
@@ -1,48 +1,62 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <title>articles</title>
     <link rel="icon" href="images/icon-logo.png">
+    <link rel="icon" href="images/icon-logo.png">
+    <meta charset="uft-8">
+    <meta name="keywords" content="News, CNN, worldNews">
+    <meta name="description" content="News website cnn">
+    <meta name="auther" content="@AbdoAli05">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
 </head>
 
-<body bgcolor="#F5F5F5">
+<body>
     <div style="width: auto;height: 40px; text-align: center;">
         <h1>"Articales"</h1>
     </div>
-    <div style="background-color: azure; width: auto;">
-        <table cellspacing="10">
-            <tr align="center">
-                <td><a href="index.html">home</a></td>
-                <td><a href="articles.html">articles</a></td>
-                <td><a href="contuctUs.html">countact us </a></td>
-                <td><a href="about.html">about us </a></td>
-                <td><a href="search.html">search</a></td>
 
-            </tr>
-        </table>
+
+
+    <nav class="nav">
+        <ul class="navbar">
+            <li><a href="index.html">home</a></li>
+            <li><a href="articles.html">articles</a></li>
+            <li><a href="contuctUs.html">countact us </a></li>
+            <li><a href="about.html">about us </a></li>
+            <li><a href="search.html">search</a></li>
+        </ul>
+        <ul>
+            <div class="toggle">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+            </div>
+        </ul>
+    </nav>
+
+
+
+    <div class="container">
+        <ul class="articalsList">
+            <li><a href="index.html#Floodwaters" class="articalsLink">Floodwater in Tennessee Overtook</a></li>
+            <li><a href="index.html#After-school" class="articalsLink">Keep your kids save</a></li>
+            <li><a href="index.html#After-school" class="articalsLink">who is going to be the 'Jeopard!' host?</a></li>
+            <li><a href="index.html#Shipping-crisis" class="articalsLink">shipping crissi is getting worse</a></li>
+            <li><a href="index.html#Shipping-crisis" class="articalsLink">Landlords ask Supreme Court </a></li>
+            <li><a href="index.html#biden-tries" class="articalsLink">Biden taking a nabe </a></li>
+            <li><a href="index.html#biden-tries" class="articalsLink">Northern Trust</a></li>
+            <li><a href="index.html#Taliban-issue" class="articalsLink">Taliban isssue a death sentence</a></li>
+            <li><a href="index.html#Dozens-Air-force" class="articalsLink">Dozenes of US Air Force</a></li>
+        </ul>
     </div>
-    <table width="700px" cellspacing="10" bgcolor="#DEDEDE">
-        <tr>
-            <td>
-                <ul type="none">
-                    <li><a href="index.html#Floodwaters">Floodwater in Tennessee Overtook</a></li>
-                    <li><a href="index.html#After-school">Keep your kids save</a></li>
-                    <li><a href="index.html#After-school">who is going to be the 'Jeopard!' host?</a></li>
-                    <li><a href="index.html#Shipping-crisis">shipping crissi is getting worse</a></li>
-                    <li><a href="index.html#Shipping-crisis">Landlords ask Supreme Court </a></li>
-                    <li><a href="index.html#biden-tries">Biden taking a nabe </a></li>
-                    <li><a href="index.html#biden-tries">Northern Trust</a></li>
-                    <li><a href="index.html#Taliban-issue">Taliban isssue a death sentence</a></li>
-                    <li><a href="index.html#Dozens-Air-force">Dozenes of US Air Force</a></li>
-                </ul>
-            </td>
 
-        </tr>
-        <tr></tr>
-        <tr></tr>
-        <tr></tr>
-    </table>
+
+
     <footer style="background: darkgray;height: 30px;text-align: center; margin: inherit;padding: 10px;
 ">copy Right &copy; to this site UNESCO Regestered by &reg; me </footer>
 </body>
