--- a/courseara-test/search.html
+++ b/courseara-test/search.html
@@ -1,27 +1,40 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <title>search</title>
     <link rel="icon" href="images/icon-logo.png">
+    <link rel="icon" href="images/icon-logo.png">
+    <meta charset="uft-8">
+    <meta name="keywords" content="News, CNN, worldNews">
+    <meta name="description" content="News website cnn">
+    <meta name="auther" content="@AbdoAli05">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body bgcolor="#F5F5F5">
     <div style="width: auto;height: 40px; text-align: center;">
         <h1>"Search"</h1>
     </div>
-    <div style="background-color: azure; width: auto;">
-        <table cellspacing="10">
-            <tr align="center">
-                <td><a href="index.html">home</a></td>
-                <td><a href="articles.html">articles</a></td>
-                <td><a href="contuctUs.html">countact us </a></td>
-                <td><a href="about.html">about us </a></td>
-                <td><a href="search.html">search</a></td>
-
-            </tr>
-        </table>
-    </div>
+    <nav class="nav">
+        <ul class="navbar">
+            <li><a href="index.html">home</a></li>
+            <li><a href="articles.html">articles</a></li>
+            <li><a href="contuctUs.html">countact us </a></li>
+            <li><a href="about.html">about us </a></li>
+            <li><a href="search.html">search</a></li>
+        </ul>
+        <ul>
+            <div class="toggle">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+            </div>
+        </ul>
+    </nav>
     <table width="700px" cellspacing="10" bgcolor="#DEDEDE">
         <tr>
             <td>
