added layout of what soon to be the home page.

--- a/courseara-test/learner.html
+++ b/courseara-test/learner.html
@@ -1,20 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <nav class="flex-container">
         <ul class="navbar">
             <li><a href="#">home</a> </li>
             <li><a href="#">learn html</a></li>
             <li><a href="#">learn css</a></li>
+            <li><a href="#">learn Js</a></li>
             <li><a href="#">learn python</a></li>
         </ul>
     </nav>
-    
+    <section class="content-container">
+        <div>
+            <h1>Html</h1>
+            <p>Lorem ipsum dolor sit amet consectetur.</p>
+            <div class="btn">learn Html</div>
+            <div class="btn">Html reference</div>
+
+        </div>
+        <div>
+            <h1>Css</h1>
+            <p>Lorem ipsum dolor sit amet consectetur.</p>
+            <div class="btn">learn Css</div>
+            <div class="btn">Css reference</div>
+
+        </div>
+        <div>
+            <h1>Js</h1>
+            <p>Lorem ipsum dolor sit amet consectetur.</p>
+            <div class="btn">learn Js</div>
+            <div class="btn">Js reference</div>
+
+        </div>
+        <div>
+            <h1>Python</h1>
+            <p>Lorem ipsum dolor sit amet consectetur.</p>
+            <div class="btn">learn Python</div>
+            <div class="btn">Python reference</div>
+
+        </div>
+    </section>
+
 </body>
+
 </html>
