--- a/courseara-test/learner.html
+++ b/courseara-test/learner.html
@@ -6,41 +6,124 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        * {
+            margin: 0;
+            padding: 0
+        }
+
+        .navbar {
+            display: flex;
+            justify-content: space-around;
+            font-size: 2rem;
+            background-color: #f1f1f1;
+            border-radius: 5em;
+            flex-wrap: wrap;
+        }
+
+        nav ul {
+            list-style: none;
+        }
+
+        .navbar a {
+            text-decoration: none;
+            color: black;
+        }
+
+        nav ul li {
+            padding: 0.5rem;
+        }
+
+        nav ul li:hover,
+        .active {
+            background-color: #555;
+            color: whitesmoke;
+        }
+
+        .content-container {
+            width: 100%;
+
+            justify-items: center;
+            margin-top: 1em;
+
+        }
+
+        .content-container div {
+
+            margin: 1em;
+        }
+
+        h1,
+        p,
+        .btn {
+            text-align: center;
+
+        }
+
+        .btn {
+            background-color: rgba(21, 214, 21, 0.822);
+            height: 1.5em;
+            padding: 1em;
+            
+            border-radius: 1em;
+
+        }
+        div{
+            border-radius: 1rem;
+        }
+        .html {
+            background-color: #e62727b3;
+        }
+        .css{
+            background-color: antiquewhite;
+        }
+        .js{
+            background-color: burlywood;
+        }
+        .python{
+           
+            background-color: darkgray;
+        }
+        .btn:hover{
+            letter-spacing: 1px;
+            box-shadow:black 1px;
+        }
+    </style>
 </head>
 
 <body>
     <nav class="flex-container">
         <ul class="navbar">
-            <li><a href="#">home</a> </li>
-            <li><a href="#">learn html</a></li>
-            <li><a href="#">learn css</a></li>
-            <li><a href="#">learn Js</a></li>
-            <li><a href="#">learn python</a></li>
+            <li><a href="#" class="active">home</a> </li>
+            <li><a href="#"> html</a></li>
+            <li><a href="#"> css</a></li>
+            <li><a href="#"> Js</a></li>
+            <li><a href="#"> python</a></li>
         </ul>
     </nav>
     <section class="content-container">
-        <div>
+        <div class="html">
             <h1>Html</h1>
             <p>Lorem ipsum dolor sit amet consectetur.</p>
             <div class="btn">learn Html</div>
             <div class="btn">Html reference</div>
 
         </div>
-        <div>
+        <div class="css">
             <h1>Css</h1>
             <p>Lorem ipsum dolor sit amet consectetur.</p>
             <div class="btn">learn Css</div>
             <div class="btn">Css reference</div>
 
         </div>
-        <div>
+        <div class="js">
             <h1>Js</h1>
             <p>Lorem ipsum dolor sit amet consectetur.</p>
             <div class="btn">learn Js</div>
             <div class="btn">Js reference</div>
 
         </div>
-        <div>
+        <div class="python">
             <h1>Python</h1>
             <p>Lorem ipsum dolor sit amet consectetur.</p>
             <div class="btn">learn Python</div>
