--- a/courseara-test/learner.html
+++ b/courseara-test/learner.html
@@ -19,10 +19,18 @@
             background-color: #f1f1f1;
             border-radius: 5em;
             flex-wrap: wrap;
+            position: sticky;
+            margin-top: 1rem;
+
+
+
         }
+    
+        
 
         nav ul {
             list-style: none;
+
         }
 
         .navbar a {
@@ -31,7 +39,7 @@
         }
 
         nav ul li {
-            padding: 0.5rem;
+            padding: 1rem;
         }
 
         nav ul li:hover,
@@ -39,7 +47,8 @@
             background-color: rgb(196, 184, 184);
             color: whitesmoke;
             box-shadow: 4px 3px 8px 1px #d62c2c;
-            border-radius: 3px;
+            border-radius: 1rem;
+
 
 
         }
@@ -55,6 +64,10 @@
         .content-container div {
 
             margin: 1em;
+        }
+
+        h1 {
+            margin-top: 1rem;
         }
 
         h1,
@@ -91,13 +104,27 @@
             width: fit-content;
 
 
+
+
+        }
+
+        .box-shadow:hover {
+            box-shadow: 4px 3px 8px 1px #e45454;
+
+            border-radius: 3rem 4rem;
+        }
+
+        section {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
         }
 
         div {
             border-radius: 1rem;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
+
+            margin: 2rem 3rem;
+            padding: 2.5rem 5rem;
         }
 
         .html {
@@ -122,6 +149,9 @@
             box-shadow: black 1px;
             border: 1px solid black;
             cursor: pointer;
+            box-shadow: 4px 3px 8px 1px #d62c2c;
+            border-radius: 3px;
+            text-transform: capitalize;
 
         }
     </style>
@@ -174,7 +204,13 @@
             </div>
 
         </div>
+        <aside class="sidebar">
+            <div>
+                Lorem ipsum dolor sit amet.
+            </div>
+        </aside>
     </section>
+
 
 </body>
 
